overflow fix

--- a/am2/responsive.css
+++ b/am2/responsive.css
@@ -259,6 +259,10 @@
         background: rgba(46, 125, 200, 0.6);
         padding-top: 0px;
     }
+    .galleryContainer{
+        overflow: hidden !important;
+    }
+    
     #logo{
         margin-left:25px; 
     }
@@ -267,7 +271,7 @@
         top: 12vh;
         right: 0px;
         height: 88vh;
-        width: 100%;
+        width: 0%;
         background: rgba(46, 125, 200, 0.8);
         display: flex;
         justify-content: space-around;
@@ -275,9 +279,10 @@
         flex-direction: column;
         text-align: center;
         box-sizing: border-box;
-        transform: translateX(100%); 
-        transition: transform 0.5s ease-in-out;
+        /* transform: translateX(100%);  */
+        transition: width 0.5s ease-in-out;
         margin-top:0;
+        overflow: hidden !important;
     }
     .link{
         opacity: 0;
@@ -294,7 +299,8 @@
     }
 
     .side-nav-active{
-        transform: translateX(0%);
+      /*   transform: translateX(0%); */
+      width: 100%;
     }
 
     .landingContainer{
