--- a/am2/style.css
+++ b/am2/style.css
@@ -51,7 +51,6 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
-
 .wrapper{
     position: relative;
 }
@@ -157,6 +156,7 @@ nav{
     font-style: normal;
     font-weight: normal;
     letter-spacing: 2px;
+    overflow-x: hidden !important;
 }
 
 .landingContainer h1 {
@@ -174,18 +174,12 @@ nav{
     width: 100%;
     height: 100vh;
     box-sizing: border-box;
-}
-
-.slideShowContainer{
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    position: relative;
+    overflow: hidden !important;
 }
 
 .imageHolder{
     width: 100%;
-    height: 100%;
+    height: 105%;
     position: absolute;
    
 }
@@ -200,8 +194,8 @@ nav{
     height: 20px;
     text-align: center;
     box-sizing: border-box;
-    position: relative;
-    top: -45px;
+    position: absolute;
+    bottom: 35px;
     z-index: 1000;
 }
 
@@ -408,6 +402,7 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 .testimonialbg{
@@ -456,18 +451,6 @@ nav{
 .slidetext{
     padding-bottom:40px; 
 }
-
-/* 
-.testimonialtext{
-    font-size: 13px;
-    padding: 10px 20px;
-    text-align: center;
-    color: #858585;
-}
-
-.testimonialpagination{
-    height: 20px;
-} */
 
 .pagination {
     display: flex;
